--- a/scss/main.css
+++ b/scss/main.css
@@ -104,6 +104,16 @@
 
 /* Responsive de la pagina web como maximo 750px */
 @media screen and (max-width: 750px) {
+  .modal .modal-dialog {
+    margin: 0.1px;
+  }
+  .modal .modal-dialog .modal-content .modal-body {
+    padding: 0;
+  }
+  .modal .modal-dialog .modal-content .modal-body .table thead th {
+    padding: 0;
+    padding-right: 10px;
+  }
   .cuotas img {
     width: 100%;
     height: 2rem;
@@ -116,6 +126,9 @@
     width: 95%;
     margin: 20px auto;
     padding: 10px;
+  }
+  #sectionform input {
+    padding-top: 5px;
   }
   .formulario input {
     width: 95%;
