--- a/scss/main.scss
+++ b/scss/main.scss
@@ -152,6 +152,40 @@
     .senddata button{
         grid-column: span 2;
     }
+
+    /* registeruser */
+    #formcontainer{
+        #sectionformreguser{
+            width: 97%;
+            .formreguser{
+                display: grid;
+                grid-template-columns: 1fr;
+                grid-template-rows: repeat(4 auto);
+                height: auto;
+                .reguserdataone{
+                    grid-column: span 1;
+                    grid-row: span 1; 
+                    height: auto;
+                }
+                .reguserdatatwo{
+                    grid-column: span 1;
+                    grid-row: span 2;
+                    height: auto;
+                }
+                .reguserdatathree{
+                    grid-column: span 1;
+                    grid-row: span 3;
+                    height: auto;
+                }
+                .reguserdatafour{
+                    grid-column: span 1;
+                    grid-row: span 4; 
+                    height: auto;
+                }
+            }
+        }
+    }
+
     #piepagina{
         display: grid;
         grid-template-columns: 1fr;
