--- a/css/style.css
+++ b/css/style.css
@@ -558,32 +558,29 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(3 auto);
     width: 100%;
-    height: 56rem;
-    gap: 2%;
+    gap: 1%;
 }
 .formreguser h3{
-    margin-bottom: 25px;
+    margin: 25px;
+    height: 70px;
 }
 .reguserdataone{
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 1;
     grid-row-end: 2;
-    height: 30rem;
 }
 .reguserdatatwo{
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 3;
-    height: 44.5rem;
 }
 .reguserdatathree{
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 2;
     grid-row-end: 3;
-    height: 13rem;
 }
 .reguserdatafour{
     grid-column-start: 1;
@@ -612,7 +609,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 1px solid rgba(0, 0, 0, 0.11);
+    border: 1px solid rgba(0, 0, 0, 0.2);
 }
 .reguserdataone div, .reguserdatatwo div, .reguserdatathree div{
     display: flex;
@@ -620,6 +617,10 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    margin-bottom: 40px;
+}
+.reguserdataone div label, .reguserdatatwo div label, .reguserdatathree div label{
+    height: 45px;
 }
 .reguserdataone div input, .reguserdatatwo div input, .reguserdatathree div input{
     width: 85%;
