--- a/css/style.css
+++ b/css/style.css
@@ -562,7 +562,7 @@
 }
 .formreguser h3{
     margin: 25px;
-    height: 70px;
+    height: 4rem;
 }
 .reguserdataone{
     grid-column-start: 1;
@@ -617,10 +617,9 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    margin-bottom: 40px;
 }
 .reguserdataone div label, .reguserdatatwo div label, .reguserdatathree div label{
-    height: 45px;
+    height: 2rem;
 }
 .reguserdataone div input, .reguserdatatwo div input, .reguserdatathree div input{
     width: 85%;
@@ -629,8 +628,8 @@
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
+    margin-bottom: 20px;
 }
-
 
 /*  */
 /* Footer de todas las paginas */
