--- a/scss/main.css
+++ b/scss/main.css
@@ -188,7 +188,7 @@
   #piepagina {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat(4, auto);
   }
   .logofooter {
     margin-bottom: 20px;
@@ -202,8 +202,7 @@
     width: 95%;
     border-bottom: 2px dashed black;
   }
-  .socialcontacto,
-  .logomapa {
+  .socialcontacto {
     grid-column-start: 1;
     grid-column-end: 5;
     grid-row-start: 1;
@@ -216,14 +215,10 @@
     justify-content: center;
     align-items: center;
   }
-  .socialesmetodo i,
-  .socialesmetodo .logomapa i {
-    font-size: x-large;
-  }
-  .logomapa {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  .socialesmetodo i {
+    font-size: xx-large;
+    width: 3rem;
+    height: 3rem;
   }
   .socialesmetodo span {
     display: none;
