--- a/scss/main.scss
+++ b/scss/main.scss
@@ -189,7 +189,7 @@
     #piepagina{
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(4, 1fr);
+        grid-template-rows: repeat(4, auto);
     }
     .logofooter{
         margin-bottom: 20px;
@@ -203,8 +203,7 @@
         width: 95%;
         border-bottom: 2px dashed black;
     }
-    .socialcontacto,
-    .logomapa{
+    .socialcontacto{
         grid-column-start: 1;
         grid-column-end: 5;
         grid-row-start: 1;
@@ -217,15 +216,11 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        i,
-        .logomapa i {
-            font-size: x-large;
+        i{
+            font-size: xx-large;
+            width: 3rem;
+            height: 3rem;
         }
-    }
-    .logomapa{
-        display: flex;
-        justify-content: center;
-        align-items: center;
     }
     .socialesmetodo span{
         display: none;
