--- a/scss/main.scss
+++ b/scss/main.scss
@@ -90,7 +90,8 @@
 }
 
 /* Responsive de la pagina web como maximo 750px */
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 750px){
+    /* Header de todas las paginas */
     .modal{
         .modal-dialog{
             margin: 0.1px;
@@ -115,10 +116,85 @@
         width: 100%;
         height: 2rem;
     }
+
+    /* Index */
     #sliderpromo ul li a img{
         width: 100%;
         height: 13rem;
     }
+    #promociones{
+        width: 98%;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(3 auto);
+        gap: 0.5%;
+        .promocionone{
+            grid-column: span 1;
+            grid-row-start: 1;
+            grid-row-end: 2;
+            gap: 1%;
+        }
+        .promociontwo{
+            grid-column: span 1;
+            grid-row-start: 2;
+            grid-row-end: 3;
+        }
+        .promocionthree{
+            grid-column: span 1;
+            grid-row-start: 3;
+            grid-row-end: 4;
+        }
+    }
+    .namepromo{
+        width: 98%;
+    }
+    .ofertasproduct{
+        .products{
+            width: 98%;
+            .product{
+                width: 25%;
+                .productinfo{
+                    .productname{
+                        p{
+                            font-size: x-small;
+                        }
+                    }
+                    .skuunits{
+                        margin-top: 0;
+                        font-size: 0.5rem;
+                    }
+                }
+                .valuecart{
+                    .value{
+                        .productvalue{
+                            span{
+                                font-size: xx-small;
+                            }
+                        }
+                        .productprevalue{
+                            span{
+                                font-size: xx-small;
+                            }
+                        }
+                    }
+                    .cartplus{
+                        width: 40%;
+                        height: auto;
+                        padding: 0;
+                        i{
+                            font-size: x-large;
+                            margin-top: 30%;
+                        }
+                    }
+                }
+            }
+            .product:nth-child(5), .product:nth-child(6){
+                display: none;
+            }
+        }
+    }
+
+
     #sectionform{
         width: 95%;
         margin: 20px auto;
@@ -186,6 +262,7 @@
         }
     }
 
+    /* Footer de todas las paginas */
     #piepagina{
         display: grid;
         grid-template-columns: 1fr;
@@ -211,7 +288,6 @@
         display: flex;
         gap: 3.5%;
     }
-  
     .socialesmetodo{
         display: flex;
         justify-content: center;
