--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
     display: flex;
     background-color: #470696;
 }
-#information span{
+#information p{
     color: white;
     font-size: clamp(0.5rem, 1vw, 2rem);
     margin: auto;
