--- a/scss/main.scss
+++ b/scss/main.scss
@@ -178,11 +178,11 @@
                         }
                     }
                     .cartplus{
-                        width: 40%;
+                        width: auto;
                         height: auto;
                         padding: 0;
                         i{
-                            font-size: x-large;
+                            font-size: larger;
                             margin-top: 30%;
                         }
                     }
