--- a/css/style.css
+++ b/css/style.css
@@ -70,9 +70,14 @@
 .buscador input{
     width: 70%;
     height: 35px;
+    border-radius: 5px;
+    padding: 8px;
 }
 .buscador button{
     width: 11%;
+    border-radius: 5px;
+    background-color: #47069698;
+    color: #fff;
 }
 .buscador button a{
     text-decoration: none;
