--- a/css/style.css
+++ b/css/style.css
@@ -15,14 +15,16 @@
 /* Estilo para la información */
 #information{
     width: 100%;
-    height: 30px;
+    height: auto;
     display: flex;
+    align-self: center;
+    justify-content: center;
     background-color: #470696;
 }
 #information p{
     color: white;
-    font-size: clamp(0.5rem, 1vw, 2rem);
-    margin: auto;
+    font-size: clamp(0.9rem, 1vw, 2rem);
+    margin: 5px;
 }
 /* Head de todas las paginas */
 /* Estilo para el head(incluye logo, bienvenida, buscador, sesion y carrito, menu y cuotas) */
@@ -59,7 +61,7 @@
 .presentation h1{
     text-align: start;
     /* font-size: 1.4rem; */
-    font-size: clamp(0.5rem, 1vw, 1.5rem);
+    font-size: clamp(0.6rem, 1vw, 1.5rem);
     word-wrap: break-word;
 }
 .buscador{
@@ -189,6 +191,12 @@
     display: flex;
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.8);
+}
+.cuotas a{
+    display: block;
+}
+.cuotas a:nth-child(2){
+    display: none;
 }
 .cuotas img{
     width: 100%;
