--- a/scss/main.scss
+++ b/scss/main.scss
@@ -101,38 +101,99 @@
             grid-column-end: 3;
             grid-row-start: 1;
             grid-row-end: 3;
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: repeat(2 auto);
             .logohead{
                 display: none;
             }
             .presearch{
+                width: 100%;
+                margin-top: 20px;
+                grid-column-start: 1;
+                grid-column-end: 2;
+                grid-row-start: 2;
+                grid-row-end: 3;
                 .presentation{
                     display: none;
                 }
                 .buscador{
-                    grid-column-start: 1;
-                    grid-column-end: 3;
-                    grid-row-start: 2;
-                    grid-row-end: 3;
+                    display: flex;
+                    justify-content: center;
+                    align-content: center;
+                    width: 100%;
+                    margin-top: 0;
+                    input{
+                        width: 78%;
+                    }
+                    button{
+                        width: 15%;
+                        i{
+                            padding-top: 5px;
+                        }
+                    }
                 }
             }
             .sesioncarro{
-                grid-column-start: 2;
-                grid-column-end: 3;
+                grid-column-start: 1;
+                grid-column-end: 2;
                 grid-row-start: 1;
                 grid-row-end: 2;
+                width: 100%;
+                margin-top: 10px;
+                margin-left: 20px;
+                .seca{
+                    width: 30%;
+                }
+                .container-fluid{
+                    text-align: center;
+                    margin: 0;
+                    padding: 0;
+                    width: 30%;
+                    .btncarro{
+                        width: 100% !important;
+                    }
+                    .modal{
+                        .modal-dialog{
+                            margin: 0.1px;
+                            .modal-content{
+                                .modal-body{
+                                    padding: 0;
+                                    .table{
+                                        thead{
+                                            tr{
+                                                th{
+                                                    padding: 0;
+                                                    padding-right: 10px;
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
                 }
             }
+        }
         #menuopciones{
             grid-column-start: 1;
             grid-column-end: 2;
             grid-row-start: 1;
             grid-row-end: 3;
-            label{
-                font-size: 3rem;
+            background-color: rgba(22, 196, 88, 0);
+            .label{
                 text-align: center;
             }
             .checkbtn {
                 display: block;
+                cursor: pointer;
+                i{
+                    font-size: 3rem;
+                    overflow-y: hidden;
+                    margin-top: 10px;
+                    margin-left: 10px;
+                }
             }
             ul {
                 position: absolute;
@@ -142,7 +203,6 @@
                 height: auto;
                 background-color: antiquewhite;
                 z-index: 1000;
-                background-color: rgba(22, 196, 88, 0.4);
                 padding: 0;
                 background-color: #dedede;
                 li {
@@ -150,7 +210,7 @@
                     width: 100%;
                     text-align: center;
                     display: none;
-                    background-color: rgba(22, 196, 88, 0.4);
+                    background-color: rgba(22, 196, 88, 0.3);
                     a{
                         font-size: large;
                     }
@@ -174,32 +234,17 @@
             grid-column-end: 3;
             grid-row-start: 4;
             grid-row-end: 5;
-        }
-    }
-
-    .modal{
-        .modal-dialog{
-            margin: 0.1px;
-            .modal-content{
-                .modal-body{
-                    padding: 0;
-                    .table{
-                        thead{
-                            tr{
-                                th{
-                                    padding: 0;
-                                    padding-right: 10px;
-                                }
-                            }
-                        }
-                    }
+            a{
+                display: block;
+                img{
+                    width: 100%;
+                    height: 2rem;
                 }
             }
+            a:nth-child(1){
+                display: none;
+            }
         }
-    }
-    .cuotas img{
-        width: 100%;
-        height: 2rem;
     }
 
     /* Index */
