Se modifica el responsive del header en todas las paginas, se arregla el sass

--- a/scss/main.css
+++ b/scss/main.css
@@ -250,10 +250,12 @@
     display: none;
   }
   /* Index */
+  /* Slider de promociones */
   #sliderpromo ul li a img {
     width: 100%;
     height: 13rem;
   }
+  /* Promociones de imagenes */
   #promociones {
     width: 98%;
     display: grid;
@@ -277,7 +279,8 @@
     grid-row-start: 3;
     grid-row-end: 4;
   }
-  .namepromo {
+  /* Equipos en promoción */
+  .ofertasproduct .namepromo {
     width: 98%;
   }
   .ofertasproduct .products {
@@ -380,40 +383,40 @@
     grid-template-columns: 1fr;
     grid-template-rows: repeat(4, auto);
   }
-  .logofooter {
-    margin-bottom: 20px;
-  }
-  .logofooter img {
-    width: 150px;
-    height: 150px;
-  }
-  .socialcontacto {
+  #piepagina .socialcontacto {
     margin-top: 20px;
     width: 95%;
     border-bottom: 2px dashed black;
-  }
-  .socialcontacto {
     grid-column-start: 1;
     grid-column-end: 5;
     grid-row-start: 1;
     grid-row-end: 2;
     display: flex;
+    justify-content: center;
+    align-content: center;
     gap: 3.5%;
   }
-  .socialesmetodo {
+  #piepagina .socialcontacto .logofooter {
+    margin-bottom: 20px;
+  }
+  #piepagina .socialcontacto .logofooter img {
+    width: 100px;
+    height: 100px;
+  }
+  #piepagina .socialcontacto .socialesmetodo {
     display: flex;
     justify-content: center;
     align-items: center;
   }
-  .socialesmetodo i {
-    font-size: xx-large;
-    width: 3rem;
+  #piepagina .socialcontacto .socialesmetodo i {
+    font-size: x-large;
+    width: 1.5rem;
     height: 3rem;
   }
-  .socialesmetodo span {
+  #piepagina .socialcontacto .socialesmetodo span {
     display: none;
   }
-  .ubicacion {
+  #piepagina .ubicacion {
     grid-column-start: 1;
     grid-column-end: 5;
     grid-row-start: 2;
@@ -421,34 +424,34 @@
     border-bottom: 2px dashed black;
     width: 95%;
   }
-  .ubi {
+  #piepagina .ubicacion .ubi {
     width: 95%;
     height: 20rem;
   }
-  .ubi i {
+  #piepagina .ubicacion .ubi i {
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 1.3rem;
   }
-  .ubi h3 {
+  #piepagina .ubicacion .ubi h3 {
     display: flex;
     justify-content: start;
     align-items: center;
     font-size: 1.4rem;
     margin: 0;
   }
-  .ubi iframe {
+  #piepagina .ubicacion .ubi iframe {
     margin-bottom: 20px;
   }
-  .serviciocliente {
+  #piepagina .serviciocliente {
     grid-column-start: 1;
     grid-column-end: 5;
     grid-row-start: 3;
     grid-row-end: 4;
     padding-left: 5%;
   }
-  .nosotros {
+  #piepagina .nosotros {
     grid-column-start: 1;
     grid-column-end: 5;
     grid-row-start: 4;
