--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,4 @@
+/* Index */
 /* Slider Index */
 #sliderpromo {
     width: 100%;
@@ -34,7 +35,6 @@
     80%{margin-left: -300%;}
     100%{margin-left: -300%;}
 }
-
 /* Sección de promociones y lanzamientos */
 .namepromo {
     width: 75%;
@@ -47,16 +47,14 @@
         color: #dedede;
     }
 }
-
-  #promociones {
+#promociones {
     margin: auto;
     margin-top: 1rem;
     width: 100%;
     display: grid;
     grid-template-columns: 0.5fr 1fr 1fr 1fr 0.5fr;
     gap: 0.5rem;
-  
-    .promocionone {
+    .promocionone{
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
@@ -69,7 +67,7 @@
             height: 100%;
         }
     }
-    .promociontwo {
+    .promociontwo{
         grid-column-start: 3;
         grid-column-end: 4;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.7);
@@ -78,11 +76,11 @@
             height: 100%;
         }
     }
-    .promocionthree {
+    .promocionthree{
         grid-column-start: 4;
         grid-column-end: 5;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.7);
-        a img {
+        a img{
             width: 100%;
             height: 100%;
         }
@@ -327,43 +325,49 @@
         }
     }
 
-
-    #sectionform{
-        width: 95%;
-        margin: 20px auto;
-        padding: 10px;
-        input{
-            padding-top: 5px;
-        }
-    }
-    .formulario input{
-        width: 95%;
-    }
-    .formulario button{
-        width: 60%;
-    }
-    .formrecover input{
-        width: 95%;
-    }
-    .formrecover button{
-        width: 95%;
-    }
-    .formcontact{
-        grid-template-columns: 1fr;
-    }
-    .formdata{
-        grid-column: span 2;
-    }
-    .textareaform{
-        grid-row-start: 8;
-        grid-row-end: 9;
-    }
-    .senddata button{
-        grid-column: span 2;
-    }
-
-    /* registeruser */
+    /* Responsive de Login- Contact - Changepassword - registeruser - recoveraccount */
     #formcontainer{
+        #sectionform{
+            width: 95%;
+            margin: 20px auto;
+            padding: 10px;
+            input{
+                padding-top: 5px;
+            }
+            .formulario{
+                div{
+                    input{
+                        width: 95%;
+                    }
+                    button{
+                        width: 60%;
+                    }
+                }
+            }
+            .secciones{
+                .formrecover {
+                    input{
+                        width: 95%;
+                    }
+                    button{
+                        width: 95%;
+                    }
+                }
+            }
+            .formcontact{
+                grid-template-columns: 1fr;
+                .formdata{
+                    grid-column: span 2;
+                }
+                .textareaform{
+                    grid-row-start: 8;
+                    grid-row-end: 9;
+                }
+                .senddata button{
+                    grid-column: span 2;
+                }
+            }
+        }
         #sectionformreguser{
             width: 97%;
             .formreguser{
