--- a/scss/main.css
+++ b/scss/main.css
@@ -1,4 +1,34 @@
 @charset "UTF-8";
+/* Estilo para toda la pagina */
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Varela Round", sans-serif;
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+
+:root {
+  --bs-gutter-x: 0;
+  --bs-gutter-y: 0;
+}
+
+/* Information de todas las paginas */
+/* Estilo para la información */
+#information {
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-self: center;
+  justify-content: center;
+  background-color: #470696;
+}
+#information p {
+  color: white;
+  font-size: clamp(0.9rem, 1vw, 2rem);
+  margin: 5px;
+}
+
 /* Index */
 /* Slider Index */
 #sliderpromo {
@@ -101,6 +131,100 @@
 #promociones .promocionthree a img {
   width: 100%;
   height: 100%;
+}
+
+/* Footer de todas las paginas */
+/* Estilo para el footer(incluye logo con contacto, servicios e información de la empresa) */
+#piepagina {
+  display: grid;
+  grid-template-columns: repeat(4 1fr);
+  grid-template-rows: 1fr;
+  border-top: 1px solid rgba(0, 0, 0, 0.15);
+  background-color: rgba(22, 196, 88, 0.4);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: auto;
+}
+#piepagina .pie {
+  margin-top: 25px;
+}
+#piepagina .socialcontacto {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  margin: auto;
+  margin-top: 25px;
+}
+#piepagina .socialcontacto .logofooter img {
+  width: 200px;
+  height: 200px;
+}
+#piepagina .socialcontacto .socialesmetodo {
+  padding: 10px;
+}
+#piepagina .ubicacion {
+  margin: auto;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+#piepagina .ubicacion .ubi {
+  display: grid;
+  grid-template-columns: 0.15fr 0.85fr;
+  grid-template-rows: 0.2fr 0.8fr;
+  overflow: hidden;
+  width: 90%;
+  height: 100%;
+}
+#piepagina .ubicacion .ubi i {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  font-size: 150%;
+}
+#piepagina .ubicacion .ubi h3 {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  font-size: 1.5rem;
+  margin: 0;
+  padding-left: 15px;
+  font-weight: bold;
+}
+#piepagina .ubicacion .ubi iframe {
+  margin: auto;
+  width: 95%;
+  height: 95%;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.9);
+  border-radius: 15px;
+}
+#piepagina .serviciocliente {
+  grid-column-start: 3;
+  grid-column-end: 4;
+  margin-left: 5%;
+  padding-right: 5%;
+}
+#piepagina .nosotros {
+  align-items: center;
+  grid-column-start: 4;
+  grid-column-end: 5;
+  margin-right: 10%;
+}
+#piepagina .serviciocliente a, #piepagina .nosotros a {
+  padding: 20px 0px 0px 20px;
+  font-size: larger;
+  display: block;
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.9);
+}
+#piepagina .serviciocliente h3, #piepagina .nosotros h3 {
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
 /* Responsive de la pagina web como maximo 750px */
@@ -464,6 +588,7 @@
 }
 /* Responsive de la pagina web como maximo 1100px */
 @media screen and (max-width: 1100px) {
+  /* Botones de inicio sesión y carrito */
   .seca {
     overflow: hidden;
     width: 75%;
@@ -480,5 +605,15 @@
     width: 80%;
     height: 2.2rem;
     transition: 0.3s;
+  }
+  /* Footer de todas las paginas */
+  #piepagina .ubicacion .ubi h3 {
+    font-size: 1.1rem;
+  }
+  #piepagina .serviciocliente h3, #piepagina .nosotros h3 {
+    font-size: 1.1rem;
+  }
+  #piepagina .serviciocliente a, #piepagina .nosotros a {
+    font-size: 1rem;
   }
 }/*# sourceMappingURL=main.css.map */
