--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,32 @@
+/* Estilo para toda la pagina */
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Varela Round', sans-serif;
+    box-sizing: border-box;
+    overflow-x: hidden;
+}
+:root{
+    --bs-gutter-x: 0;
+    --bs-gutter-y: 0;
+}
+
+/* Information de todas las paginas */
+/* Estilo para la información */
+#information{
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    background-color: #470696;
+    p{
+        color: white;
+        font-size: clamp(0.9rem, 1vw, 2rem);
+        margin: 5px;
+    }
+}
+
 /* Index */
 /* Slider Index */
 #sliderpromo {
@@ -83,6 +112,104 @@
         a img{
             width: 100%;
             height: 100%;
+        }
+    }
+}
+
+/* Footer de todas las paginas */
+/* Estilo para el footer(incluye logo con contacto, servicios e información de la empresa) */
+#piepagina{
+    display: grid;
+    grid-template-columns: repeat(4 1fr);
+    grid-template-rows: 1fr;
+    border-top: 1px solid rgba(0, 0, 0, 0.15);
+    background-color: rgba(22, 196, 88, 0.4);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: auto;
+    .pie{
+        margin-top: 25px;
+    }
+    .socialcontacto{
+        grid-column-start: 1;
+        grid-column-end: 2;
+        margin: auto;
+        margin-top: 25px;
+        .logofooter{ 
+            img{
+                width: 200px;
+                height: 200px;
+            }
+        }
+        .socialesmetodo{
+            padding: 10px;
+        }
+    }
+    .ubicacion{
+        margin:auto;
+        grid-column-start: 2;
+        grid-column-end: 3;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        .ubi{
+            display: grid;
+            grid-template-columns: 0.15fr 0.85fr;
+            grid-template-rows: 0.2fr 0.8fr;
+            overflow: hidden;
+            width: 90%;
+            height: 100%;
+            i{
+                display: flex;
+                justify-content: end;
+                align-items: center;
+                font-size: 150%;
+            }
+            h3{
+                display: flex;
+                justify-content: start;
+                align-items: center;
+                font-size: 1.5rem;
+                margin: 0;
+                padding-left: 15px;
+                font-weight: bold;
+            }
+            iframe{
+                margin: auto;
+                width: 95%;
+                height: 95%;
+                grid-column-start: 1; 
+                grid-column-end: 3;
+                box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.9);
+                border-radius: 15px;
+            }
+        }
+    }
+    .serviciocliente{
+        grid-column-start: 3;
+        grid-column-end: 4;
+        margin-left: 5%;
+        padding-right: 5%;
+    }
+    .nosotros{
+        align-items: center;
+        grid-column-start: 4;
+        grid-column-end: 5;
+        margin-right: 10%;
+    }
+    .serviciocliente, .nosotros{
+        a{
+            padding: 20px 0px 0px 20px;
+            font-size: larger;
+            display: block;
+            text-decoration: none;
+            color: rgba(0, 0, 0, 0.9);
+        }
+        h3{
+            font-size: 1.5rem;
+            font-weight: bold;
         }
     }
 }
@@ -486,6 +613,7 @@
 
 /* Responsive de la pagina web como maximo 1100px */
 @media screen and (max-width: 1100px) {
+    /* Botones de inicio sesión y carrito */
     .seca{
         overflow: hidden;
         width: 75%;
@@ -501,6 +629,25 @@
             width: 80%;
             height: 2.2rem;
             transition: 0.3s;
+        }
+    }
+
+    /* Footer de todas las paginas */
+    #piepagina{
+        .ubicacion{
+            .ubi{
+                h3{
+                    font-size: 1.1rem;
+                }
+            }
+        }
+        .serviciocliente, .nosotros{
+            h3{
+                font-size: 1.1rem;
+            }
+            a{
+                font-size: 1rem;
+            }
         }
     }
 }
