Se da un margin top al footer

--- a/scss/main.css
+++ b/scss/main.css
@@ -144,6 +144,7 @@
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   width: 100%;
   height: auto;
+  margin-top: 25px;
 }
 #piepagina .pie {
   margin-top: 25px;
