--- a/scss/main.scss
+++ b/scss/main.scss
@@ -127,6 +127,7 @@
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     width: 100%;
     height: auto;
+    margin-top: 25px;
     .pie{
         margin-top: 25px;
     }
