--- a/scss/main.css
+++ b/scss/main.css
@@ -304,7 +304,14 @@
   }
   #cabezal .containercabezal .sesioncarro .container-fluid .modal .modal-dialog .modal-content .modal-body .table thead tr th {
     padding: 0;
-    padding-right: 10px;
+    padding-right: 0;
+    font-size: small;
+    width: 20%;
+  }
+  #cabezal .containercabezal .sesioncarro .container-fluid .modal .modal-dialog .modal-content .modal-body .table tbody tr td {
+    padding: 0;
+    font-size: small;
+    width: 20%;
   }
   #cabezal #menuopciones {
     grid-column-start: 1;
