--- a/scss/main.scss
+++ b/scss/main.scss
@@ -290,7 +290,18 @@
                                             tr{
                                                 th{
                                                     padding: 0;
-                                                    padding-right: 10px;
+                                                    padding-right: 0;
+                                                    font-size: small;
+                                                    width: 20%;
+                                                }
+                                            }
+                                        }
+                                        tbody{
+                                            tr{
+                                                td{
+                                                    padding: 0;
+                                                    font-size: small;
+                                                    width: 20%;
                                                 }
                                             }
                                         }
