--- a/scss/main.scss
+++ b/scss/main.scss
@@ -291,7 +291,7 @@
                                                 th{
                                                     padding: 0;
                                                     padding-right: 0;
-                                                    font-size: small;
+                                                    font-size: x-small;
                                                     width: 20%;
                                                 }
                                             }
@@ -300,7 +300,7 @@
                                             tr{
                                                 td{
                                                     padding: 0;
-                                                    font-size: small;
+                                                    font-size: x-small;
                                                     width: 20%;
                                                 }
                                             }
